--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-  "name": "pcp",
+  "name": "net-pcp",
   "version": "0.0.0",
-  "description": "RFC 6887: Port Control Protocol (PCP)",
-  "main": "lib/pcp",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jhermsmeier/node-pcp.git"
-  },
+  "description": "Port Control Protocol (PCP)",
+  "license": "MIT",
   "keywords": [
+    "RFC6887",
+    "RFC",
+    "6887",
+    "PCP",
     "port",
     "control",
     "protocol",
-    "mapping",
-    "map",
-    "pcp",
-    "rfc6887"
+    "mapping"
   ],
-  "author": "Jonas Hermsmeier <jhermsmeier@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jhermsmeier/node-pcp/issues"
-  },
-  "homepage": "https://github.com/jhermsmeier/node-pcp",
+  "main": "lib/pcp",
+  "author": "Jonas Hermsmeier <jhermsmeier@gmail.com> (https://jhermsmeier.de/)",
   "dependencies": {
-    "async-emitter": "^1.5.2",
-    "derive": "^2.3.0",
+    "async-emitter": "~1.5.2",
+    "derive": "~2.3.0",
     "hat": "0.0.3",
-    "ipaddr.js": "^0.1.3",
-    "network": "0.0.9"
+    "ipaddr.js": "~0.1.8",
+    "network": "0.1.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "homepage": "https://github.com/jhermsmeier/node-net-pcp",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jhermsmeier/node-net-pcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jhermsmeier/node-net-pcp/issues"
   }
 }
