--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Jonas Hermsmeier <jhermsmeier@gmail.com> (https://jhermsmeier.de/)",
   "dependencies": {
     "async-emitter": "~1.5.2",
-    "derive": "~2.3.0",
+    "bloodline": "~1.0.0",
     "hat": "0.0.3",
     "ipaddr.js": "~0.1.8",
     "network": "0.1.3"
